--- a/index.css
+++ b/index.css
@@ -1,6 +1,7 @@
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 
+
 * {
 	padding: 0;
 	margin: 0;
@@ -9,6 +10,8 @@
 	font-family: "Lato", sans-serif;
 	font-weight: 400;
 	font-style: normal;
+
+	text-decoration: none;
 }
 
 
@@ -58,9 +61,6 @@
 
 
 
-a {
-	text-decoration: none;
-}
 
 a:link {
 	color: white; 
@@ -83,49 +83,61 @@ a:hover {
 }
 
 
-#message-us button {
-	background-color: lightblue;
-}
 
 #contact-us {
 	background-color: #f5b56c;
 }
 
-h1 {
+.crimson-text-semibold-italic {
   font-family: "Crimson Text", serif;
   font-weight: 600;
   font-style: italic;
 }
 
 
-
- h3 {
+ .poppins-text {
 	font-family: "Poppins", sans-serif;
 	font-weight: 700;
    font-style: normal
 }
 
 
-p {
-
-  font-family: "Roboto Condensed", sans-serif;
-  font-optical-sizing: auto;
-  font-weight: 400;
+.merriweather-bold {
+  font-family: "Merriweather", serif;
+  font-weight: 700;
   font-style: normal;
 }
 
-h4
-{
-	font-family: "Poppins", sans-serif;
-	font-weight: 300;
-	font-style: italic;
+.poppins-regular {
+  font-family: "Poppins", sans-serif;
+  font-weight: 400;
+  font-style: normal;
 }
-
 .carousel-inner .carousel-item {
 	margin: auto;
 }
 
 
+.ubuntu-bold {
+  font-family: "Ubuntu", sans-serif;
+  font-optical-sizing: auto;
+  font-weight: 700;
+  font-style: normal;
+}
+
+
+.oswald-bold {
+  font-family: "Oswald", sans-serif;
+  font-weight: 400;
+  font-style: normal;
+}
+
+.roboto-mono-medium {
+  font-family: "Roboto Mono", monospace;
+  font-optical-sizing: auto;
+  font-weight: 500;
+  font-style: normal;
+}
 
   @media only screen and (max-width: 992px) { 
   #card1 { 
